# oxcaml-vendor-tool

./: .gitignore  README.md  dune-project  lock.sexp  monorepo.lock.sexp  monorepo.sexp  monorepo.solver.sexp  oxcaml-vendor-tool.opam  rebuild-example.sh  solver-config.sexp
_example/: .gitignore  dune  dune-workspace
_monorepo-solver.lock/: desired-packages.sexp  dune-snippet  nonstandard-build-packages.sexp  packages.sexp  repos.sexp
_monorepo-solver.lock/opams/: accessor_async.v0.18~preview.130.55+197.opam  async_find.v0.18~preview.130.55+197.opam  async_rpc_websocket.v0.18~preview.130.55+197.opam  async_smtp.v0.18~preview.130.55+197.opam  async_websocket.v0.18~preview.130.55+197.opam  babel.v0.18~preview.130.55+197.opam  base.v0.18~preview.130.55+197.opam  base_quickcheck.v0.18~preview.130.55+197.opam  basement.v0.18~preview.130.55+197.opam  bitset.v0.18~preview.130.55+197.opam  bonsai_bench.v0.18~preview.130.55+197.opam  bonsai_concrete.v0.18~preview.130.55+197.opam  command_rpc.v0.18~preview.130.55+197.opam  content_security_policy.v0.18~preview.130.55+197.opam  core_bench.v0.18~preview.130.55+197.opam  core_extended.v0.18~preview.130.55+197.opam  core_profiler.v0.18~preview.130.55+197.opam  ctypes-foreign.0.23.0+ox.opam  ctypes.0.23.0+ox.opam  dedent.v0.18~preview.130.55+197.opam  float_array.v0.18~preview.130.55+197.opam  gen_js_api.1.1.2+ox.opam  hardcaml_circuits.v0.18~preview.130.55+197.opam  hardcaml_fixed_point.v0.18~preview.130.55+197.opam  hardcaml_handshake.v0.18~preview.130.55+197.opam  hardcaml_of_verilog.v0.18~preview.130.55+197.opam  hardcaml_verify.v0.18~preview.130.55+197.opam  incr_dom.v0.18~preview.130.55+197.opam  incr_map.v0.18~preview.130.55+197.opam  incr_select.v0.18~preview.130.55+197.opam  int_repr.v0.18~preview.130.55+197.opam  js_of_ocaml-compiler.6.0.1+ox.opam  js_of_ocaml-ppx.6.0.1+ox.opam  js_of_ocaml.6.0.1+ox.opam  jsonrpc.1.19.0+ox.opam  jst-config.v0.18~preview.130.55+197.opam  ocaml-probes.v0.18~preview.130.55+197.opam  ocaml-variants.5.2.0+ox.opam  ocaml_openapi_generator.v0.18~preview.130.55+197.opam  oklab.v0.18~preview.130.55+197.opam  (+31 more)
_solver/: desired-packages.sexp  nonstandard-build-packages.sexp  package-summary.sexp  packages.sexp  repos.sexp
configs/: 0-repos.lock.sexp  0-repos.sexp  0-upstreams.sexp  1-package-selection.lock.sexp  1-package-selection.sexp
dune.lock/: 0install-solver.pkg  async.pkg  async_kernel.pkg  async_log.pkg  async_rpc_kernel.pkg  async_ssl.pkg  async_unix.pkg  cohttp-async.pkg  cohttp.pkg  conduit-async.pkg  conduit.pkg  conf-libffi.pkg  core_extended.pkg  core_kernel.pkg  core_unix.pkg  http.pkg  ipaddr-sexp.pkg  ipaddr.pkg  jsonaf.pkg  lock.dune  logs.pkg  macaddr.pkg  menhir.pkg  menhirLib.pkg  ocamlgraph.pkg  of_json.pkg  opam-0install.pkg  opam-core.pkg  opam-format.pkg  opam-repository.pkg  opam-state.pkg  patch.pkg  protocol_version_header.pkg  record_builder.pkg  sha.pkg  spdx_licenses.pkg  swhid_core.pkg  textutils.pkg  timezone.pkg  uopt.pkg
patches/: async_ssl.patch  sedlex.patch  zarith.patch
src/app/: dune  oxcaml_vendor_tool.ml  upstreams.ml
src/fetch_and_patch/: config.ml  config.mli  dune  fetch_upstream.ml  fetch_upstream.mli  fetch_upstreams.ml  fetch_upstreams.mli  oxcaml_vendor_tool_fetch_and_patch.ml  patch_manager.ml  pull.ml
src/lib/: configs.ml  configs.mli  dune  lock_file.ml  lock_file.mli  nonempty.ml  nonempty.mli  opam.ml  opam.mli  project.ml  project.mli
src/solver/: config.ml  config.mli  desired_package_resolution.ml  desired_package_resolution.mli  dune  opam.ml  opam.mli  oxcaml_vendor_tool_solver.ml  oxcaml_vendor_tool_solver.mli  repo.ml  repo.mli  repo_fetch.ml  repo_fetch.mli  solver.ml  solver.mli  solver_context.ml  solver_context.mli  vendor_planner.ml  vendor_planner.mli
