opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_smtp"
bug-reports: "https://github.com/janestreet/async_smtp/issues"
dev-repo: "git+https://github.com/janestreet/async_smtp.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_smtp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"          {>= "5.1.0"}
  "async"          {= "v0.18~preview.130.55+197"}
  "async_extra"    {= "v0.18~preview.130.55+197"}
  "async_inotify"  {= "v0.18~preview.130.55+197"}
  "async_log"      {= "v0.18~preview.130.55+197"}
  "async_sendfile" {= "v0.18~preview.130.55+197"}
  "async_shell"    {= "v0.18~preview.130.55+197"}
  "async_ssl"      {= "v0.18~preview.130.55+197"}
  "babel"          {= "v0.18~preview.130.55+197"}
  "bin_prot"       {= "v0.18~preview.130.55+197"}
  "core"           {= "v0.18~preview.130.55+197"}
  "core_kernel"    {= "v0.18~preview.130.55+197"}
  "core_unix"      {= "v0.18~preview.130.55+197"}
  "email_message"  {= "v0.18~preview.130.55+197"}
  "ppx_jane"       {= "v0.18~preview.130.55+197"}
  "ppx_stable"     {= "v0.18~preview.130.55+197"}
  "re2"            {= "v0.18~preview.130.55+197"}
  "resource_cache" {= "v0.18~preview.130.55+197"}
  "sexp_macro"     {= "v0.18~preview.130.55+197"}
  "textutils"      {= "v0.18~preview.130.55+197"}
  "angstrom"       {>= "0.15.0"}
  "base64"         {>= "3.4.0"}
  "cryptokit"      {>= "1.16" & < "1.17"}
  "dune"           {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "SMTP client and server"
description: """
"""
url {
  src:
    "https://github.com/janestreet/async_smtp/archive/272001a4254c1712b8fbc78fab169efa9f8ef20c.tar.gz"
  checksum:
    "sha256=176c8176c3cb50265e7ae95eedb6ef9ec15d5aa73086cead9a49ee8ab84aea58"
}
