opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_websocket"
bug-reports: "https://github.com/janestreet/async_websocket/issues"
dev-repo: "git+https://github.com/janestreet/async_websocket.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_websocket/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "async"            {= "v0.18~preview.130.55+197"}
  "async_rpc_kernel" {= "v0.18~preview.130.55+197"}
  "core"             {= "v0.18~preview.130.55+197"}
  "core_kernel"      {= "v0.18~preview.130.55+197"}
  "ppx_jane"         {= "v0.18~preview.130.55+197"}
  "cryptokit"        {>= "1.16" & < "1.17"}
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library that implements the websocket protocol on top of Async"
description: """
This library implements both the server and client side of
                the websocket protocol.
"""
url {
  src:
    "https://github.com/janestreet/async_websocket/archive/3b33c6f5353912b5e7e0b76324a5061ca340d04f.tar.gz"
  checksum:
    "sha256=6d818940b97f634e74da56f584c556aa455f6f1d8a5e7e8c740efc4a578892d8"
}
