opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/basement"
bug-reports: "https://github.com/janestreet/basement/issues"
dev-repo: "git+https://github.com/janestreet/basement.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/basement/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune"  {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Modules defined upstream of and reexported in Base"
description: """
Part of Jane Street's Core library
Basement is a library containing a number of modules that belong to Base, but need to be
defined upstream of Base to break circular dependencies with other libraries, such as
sexplib0
"""
url {
  src:
    "https://github.com/janestreet/basement/archive/bfe5c6953f5e69c148431c4027ed41385e68402e.tar.gz"
  checksum:
    "sha256=2201829a1d1fe13138d75a7ae856bd742e38fe78ffdbfb06e38ecd624ccbfefd"
}
