opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bitset"
bug-reports: "https://github.com/janestreet/bitset/issues"
dev-repo: "git+https://github.com/janestreet/bitset.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bitset/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                   {>= "5.1.0"}
  "core"                    {= "v0.18~preview.130.55+197"}
  "ocaml_intrinsics_kernel" {= "v0.18~preview.130.55+197"}
  "ppx_jane"                {= "v0.18~preview.130.55+197"}
  "unboxed"                 {= "v0.18~preview.130.55+197"}
  "dune"                    {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for flat bitsets"
description: """
 An efficient mutable bitset.
"""
url {
  src:
    "https://github.com/janestreet/bitset/archive/b2fc30418f4fd65bbb8a12515c0ae62b09e08c6a.tar.gz"
  checksum:
    "sha256=314ee908e43b67d7ca2b7be470c7eea23b7ec757f5d0c627ad91d976c5499924"
}
