opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai_bench"
bug-reports: "https://github.com/janestreet/bonsai_bench/issues"
dev-repo: "git+https://github.com/janestreet/bonsai_bench.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "bonsai"           {= "v0.18~preview.130.55+197"}
  "bonsai_concrete"  {= "v0.18~preview.130.55+197"}
  "command_nodejs"   {= "v0.18~preview.130.55+197"}
  "core"             {= "v0.18~preview.130.55+197"}
  "core_bench"       {= "v0.18~preview.130.55+197"}
  "expectable"       {= "v0.18~preview.130.55+197"}
  "incr_dom"         {= "v0.18~preview.130.55+197"}
  "ocaml-embed-file" {= "v0.18~preview.130.55+197"}
  "ppx_jane"         {= "v0.18~preview.130.55+197"}
  "ppx_pattern_bind" {= "v0.18~preview.130.55+197"}
  "textutils"        {= "v0.18~preview.130.55+197"}
  "dune"             {>= "3.17.0"}
  "js_of_ocaml-ppx"  {= "6.0.1+ox"}
  "uri"              {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for benchmarking bonsai web applications"
description: """
Bonsai is a library for building reusable UI components inside an
     Incremental-style UI framework such as Incr_dom or React. This repository
     provides benchmarking capabilities.
"""
url {
  src:
    "https://github.com/janestreet/bonsai_bench/archive/37856cb7c551bbd4bee902baf385a5b12c71e561.tar.gz"
  checksum:
    "sha256=05cf30a2793c1c28f04ddf4e694f4d1a6a55b720ecf5b5c4b35de1e4c1933af5"
}
