opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/command_rpc"
bug-reports: "https://github.com/janestreet/command_rpc/issues"
dev-repo: "git+https://github.com/janestreet/command_rpc.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/command_rpc/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "5.1.0"}
  "async"       {= "v0.18~preview.130.55+197"}
  "core"        {= "v0.18~preview.130.55+197"}
  "core_kernel" {= "v0.18~preview.130.55+197"}
  "core_unix"   {= "v0.18~preview.130.55+197"}
  "ppx_jane"    {= "v0.18~preview.130.55+197"}
  "dune"        {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "Utilities for Versioned RPC communication with a child process over stdin and stdout"
description: """
"""
url {
  src:
    "https://github.com/janestreet/command_rpc/archive/04239488e80982d1730b5de8d3c3ec7e6d9af149.tar.gz"
  checksum:
    "sha256=7c4299f16f78c3308e4610793074d8e84e73dd51602b0d328b1f7f556af94eea"
}
