opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/content_security_policy"
bug-reports: "https://github.com/janestreet/content_security_policy/issues"
dev-repo: "git+https://github.com/janestreet/content_security_policy.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/content_security_policy/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"     {>= "5.1.0"}
  "core"      {= "v0.18~preview.130.55+197"}
  "ppx_jane"  {= "v0.18~preview.130.55+197"}
  "base64"    {>= "3.4.0"}
  "cryptokit" {>= "1.16" & < "1.17"}
  "dune"      {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for building content-security policies"
description: """
https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
"""
url {
  src:
    "https://github.com/janestreet/content_security_policy/archive/0831359d3a1680319f57abefc5221178e877b125.tar.gz"
  checksum:
    "sha256=85fa8577a5aae3edeb282e683fc9e83ce23805c8136f2459ff2cd57233a34c20"
}
