opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_bench"
bug-reports: "https://github.com/janestreet/core_bench/issues"
dev-repo: "git+https://github.com/janestreet/core_bench.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"             {>= "5.1.0"}
  "command_nodejs"    {= "v0.18~preview.130.55+197"}
  "core"              {= "v0.18~preview.130.55+197"}
  "core_extended"     {= "v0.18~preview.130.55+197"}
  "core_kernel"       {= "v0.18~preview.130.55+197"}
  "core_unix"         {= "v0.18~preview.130.55+197"}
  "delimited_parsing" {= "v0.18~preview.130.55+197"}
  "ppx_bench"         {= "v0.18~preview.130.55+197"}
  "ppx_compare"       {= "v0.18~preview.130.55+197"}
  "ppx_fields_conv"   {= "v0.18~preview.130.55+197"}
  "ppx_jane"          {= "v0.18~preview.130.55+197"}
  "ppx_let"           {= "v0.18~preview.130.55+197"}
  "ppx_sexp_conv"     {= "v0.18~preview.130.55+197"}
  "textutils"         {= "v0.18~preview.130.55+197"}
  "time_now"          {= "v0.18~preview.130.55+197"}
  "dune"              {>= "3.17.0"}
  "js_of_ocaml-ppx"   {= "6.0.1+ox"}
  "re"                {= "1.14.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Benchmarking library"
description: """
"""
url {
  src:
    "https://github.com/janestreet/core_bench/archive/188b102a81bfee9d2f2109ef40fcaca24fd19b16.tar.gz"
  checksum:
    "sha256=f5beac5203dc8ea0f8636be5d980df4f0b57435491a3a0baabf3395746c5dcf3"
}
