opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/dedent"
bug-reports: "https://github.com/janestreet/dedent/issues"
dev-repo: "git+https://github.com/janestreet/dedent.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/dedent/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "base"     {= "v0.18~preview.130.55+197"}
  "ppx_jane" {= "v0.18~preview.130.55+197"}
  "stdio"    {= "v0.18~preview.130.55+197"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "A library for improving redability of multi-line string constants in code."
description: """
A library for improving redability of multi-line string constants in code.
"""
url {
  src:
    "https://github.com/janestreet/dedent/archive/bb35c35319082ad858cf8db1ba41aed26ba48164.tar.gz"
  checksum:
    "sha256=9b0d7c5c92d18315272a2ca3807a08dbb4764f577678f2e0385e06d5540df6f9"
}
