opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/float_array"
bug-reports: "https://github.com/janestreet/float_array/issues"
dev-repo: "git+https://github.com/janestreet/float_array.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/float_array/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.2.0"}
  "bin_prot" {= "v0.18~preview.130.55+197"}
  "core"     {= "v0.18~preview.130.55+197"}
  "ppx_jane" {= "v0.18~preview.130.55+197"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Mutable vector of floats with efficient operations"
description: """
Mutable vector of floats with O(1) get and set operations.
"""
url {
  src:
    "https://github.com/janestreet/float_array/archive/d25cd8417532711be1b5400452501725eb4ea20d.tar.gz"
  checksum:
    "sha256=ea38401bac2992fd3acbbcb2664f0c455c25c96bfabab6d6fdfde14502155eed"
}
