opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_fixed_point"
bug-reports: "https://github.com/janestreet/hardcaml_fixed_point/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_fixed_point.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_fixed_point/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "base"     {= "v0.18~preview.130.55+197"}
  "hardcaml" {= "v0.18~preview.130.55+197"}
  "ppx_jane" {= "v0.18~preview.130.55+197"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml fixed point arithmetic"
description: """
Signed and Unsigned fixed point operations, with a full complement of rounding and
overflow functionality.
"""
url {
  src:
    "https://github.com/janestreet/hardcaml_fixed_point/archive/b30dd5dbc691e3a527e07626df3b27c4d0251c09.tar.gz"
  checksum:
    "sha256=662d6c19ea7881fbc60cdd78f37070126f0b96d622a677e273b76fc12433fae1"
}
