opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_handshake"
bug-reports: "https://github.com/janestreet/hardcaml_handshake/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_handshake.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_handshake/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "5.1.0"}
  "base"         {= "v0.18~preview.130.55+197"}
  "hardcaml"     {= "v0.18~preview.130.55+197"}
  "ppx_hardcaml" {= "v0.18~preview.130.55+197"}
  "ppx_jane"     {= "v0.18~preview.130.55+197"}
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml Handshake"
description: """
Library for constructing circuits with a pair of valid and ready handshake signals.
"""
url {
  src:
    "https://github.com/janestreet/hardcaml_handshake/archive/015457c7d45acbea49d730fb4119c8aa1ef1a1e5.tar.gz"
  checksum:
    "sha256=c1ed997fab37cd9ed9f9b0f25d73839d1e9018989603d2b519dcec25de0969c7"
}
