opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/int_repr"
bug-reports: "https://github.com/janestreet/int_repr/issues"
dev-repo: "git+https://github.com/janestreet/int_repr.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/int_repr/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "base"     {= "v0.18~preview.130.55+197"}
  "ppx_jane" {= "v0.18~preview.130.55+197"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Integers of various widths"
description: """
Integers of various widths.
"""
url {
  src:
    "https://github.com/janestreet/int_repr/archive/dfd133ac6f87cb6f705d021e7920834ceda90b69.tar.gz"
  checksum:
    "sha256=4b522689dde52dd6794a148797a4bffd78874e95d122590f8429406673a60a8d"
}
