opam-version: "2.0"
version: "6.0.1+ox"
name: "js_of_ocaml-compiler"
synopsis: "Compiler from OCaml bytecode to JavaScript"
description:
  "Js_of_ocaml is a compiler from OCaml bytecode to JavaScript. It makes it possible to run pure OCaml programs in JavaScript environment like browsers and Node.js"
maintainer: "Ocsigen team <dev@ocsigen.org>"
authors: "Ocsigen team <dev@ocsigen.org>"
license: [
  "GPL-2.0-or-later" "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
]
homepage: "https://ocsigen.org/js_of_ocaml/latest/manual/overview"
doc: "https://ocsigen.org/js_of_ocaml/latest/manual/overview"
bug-reports: "https://github.com/ocsigen/js_of_ocaml/issues"
depends: [
  "dune"       {>= "3.17"}
  "ocaml"      {>= "4.08" & < "5.4"}
  "num"        {with-test}
  "ppx_expect" {>= "v0.16.1" & with-test}
  "ppxlib"     {= "0.33.0+ox"}
  "re"         {with-test & = "1.14.0+ox"}
  "cmdliner"   {>= "1.1.0"}
  "sedlex"     {= "3.3+ox"}
  "qcheck"     {with-test}
  "menhir"
  "menhirLib"
  "menhirSdk"
  "yojson"     {>= "2.1"}
  "odoc"       {with-doc}
]
depopts: ["ocamlfind"]
conflicts: [
  "ocamlfind" {< "1.5.1"}
  "js_of_ocaml" {< "3.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]
dev-repo: "git+https://github.com/ocsigen/js_of_ocaml.git"
url {
  src:
    "https://github.com/ocsigen/js_of_ocaml/archive/246df644334aa97103d1051aec128337ea1868f9.tar.gz"
  checksum:
    "sha256=c43572970512140facf02a30f16d4b34c10d55326bbd3d3c125bc2e549ef4ab8"
}
patches: [
  "js_of_ocaml-magic_number.ml.patch"
  "js_of_ocaml-compilation_unit-name.patch"
  "js_of_ocaml-with_async_exns.patch"
  "js_of_ocaml-internal-obj-changes.patch"
  "js_of_ocaml-add-unboxed-and-float-block.patch"
  "js_of_ocaml-ident-is_global.patch"
  "js_of_ocaml-remove-float-externals.patch"
  "js_of_ocaml-test-diffs-caused-by-build-differences.patch"
  "js_of_ocaml-fix-build_fs.patch"
  "js_of_ocaml-iarray-primitives.patch"
  "js_of_ocaml-important-config-changes.patch"
  "js_of_ocaml-internal-ocaml-5-compatibility.patch"
  "js_of_ocaml-wasm-temp-differences.patch"
  "js_of_ocaml-caml_provides_sub_local.patch"
  "js_of_ocaml-caml_hash_exn.patch"
  "wasm_of_ocaml-bring-back-eval.patch"
  "js_of_ocaml-mixed-block-bytecode-op.patch"
  "js_of_ocaml-mixed-block-bytecode-op-regression-test.patch"
  "js_of_ocaml-int_u-array-primitives.patch"
  "js_of_ocaml-symtable-5.2-api.patch"
  "js_of_ocaml-jane-street-5.2-compatibility.patch"
  "js_of_ocaml-migrate-labeled-tuples-shims.patch"
  "js_of_ocaml-floatarray_create_local.patch"
  "js_of_ocaml-jane-street-const_null-support.patch"
  "js_of_ocaml-float32.patch"
  "js_of_ocaml-caml_array_append.patch"
  "js_of_ocaml-5.2.0-compiler-changes.patch"
  "js_of_ocaml-5.3-tests-runtime.patch"
  "js_of_ocaml-caml_bigstring_strncmp.patch"
  "wasm_of_ocaml-stub-caml_ml_set_channel_refill.patch"
  "js_of_ocaml-no-compression-module-5.2.patch"
  "js_of_ocaml-obj_stubs.patch"
  "js_of_ocaml-global_deadcode-fix.patch"
  "js_of_ocaml-local-bytes.patch"
  "js_of_ocaml-n-ary-functions.patch"
  "js_of_ocaml-optcomp_lite_fixes.patch"
  "js_of_ocaml-revert_9c15703872_behavior_changing_rewrite_of_float_to_bits.patch"
  "js_of_ocaml-stop_evaluating_caml_int64_bits_of_float_to_avoid_breaking_float_u.patch"
  "js_of_ocaml-gh2034.patch"
  "js_of_ocaml-unboxed-indexing.patch"
  "js_of_ocaml-atomics.patch"
  "js_of_ocaml-flipped-conditions-in-test.patch"
  "js_of_ocaml-atomic-cmpxchg.patch"
  "js_of_ocaml-small-int-literals.patch"
  "dune.patch"
 "js_of_ocaml-toplevel.patch"
]
extra-files: [
  [
    "js_of_ocaml-magic_number.ml.patch"
    "sha256=05e204eac0338a76ca02db89ebb9505d80a7e268b93b746408356be913e219e6"
  ]
  [
    "js_of_ocaml-compilation_unit-name.patch"
    "sha256=1e00a73f66cbaa87eefb45702eaaf431978f8eb9ed95684c781b0ebb035d1a7f"
  ]
  [
    "js_of_ocaml-with_async_exns.patch"
    "sha256=0df2643d0b528b121e939506b6240cc35225bc5bffbcc80e6322e9cc8a269419"
  ]
  [
    "js_of_ocaml-internal-obj-changes.patch"
    "sha256=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
  ]
  [
    "js_of_ocaml-add-unboxed-and-float-block.patch"
    "sha256=db409edb2be9be828015b6722fb51d7bccdd1e4a7edf982b5c8d89808713af7b"
  ]
  [
    "js_of_ocaml-ident-is_global.patch"
    "sha256=9cc507a14142220868af1c6f1e35b06648718f21924b0fb192d6bcf4d28395f6"
  ]
  [
    "js_of_ocaml-remove-float-externals.patch"
    "sha256=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
  ]
  [
    "js_of_ocaml-test-diffs-caused-by-build-differences.patch"
    "sha256=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
  ]
  [
    "js_of_ocaml-fix-build_fs.patch"
    "sha256=abaa404bf23a77cf1badfe30ab9fcc13c6fb0446a81fa10b0962ed1ba9005d6a"
  ]
  [
    "js_of_ocaml-iarray-primitives.patch"
    "sha256=8c320fb413daad0393347bf6a22ca31fe6f1d3dd34f58e313aa44cd060fc56f8"
  ]
  [
    "js_of_ocaml-important-config-changes.patch"
    "sha256=eeb46aea8e0f0d2232b47f32a8a1d60237626637304431847e60316424daadd3"
  ]
  [
    "js_of_ocaml-internal-ocaml-5-compatibility.patch"
    "sha256=6b7e17df7f0142158eca19a953422eb6eaf97a3f7f3f2443648bfd069fbcb90f"
  ]
  [
    "js_of_ocaml-wasm-temp-differences.patch"
    "sha256=d644765237b939ab611c10f71672504ced91bf4ba0e8fe87a6cebc521bf2f34a"
  ]
  [
    "js_of_ocaml-caml_provides_sub_local.patch"
    "sha256=11b749d7c1b84b1145cbcf63801c2924ab89846ceff3a6fa8a2305bb3bc90f77"
  ]
  [
    "js_of_ocaml-caml_hash_exn.patch"
    "sha256=eaf87543603ab7f9c5c8e410413f913e572c1815c93a30ac89b245effd435e39"
  ]
  [
    "wasm_of_ocaml-bring-back-eval.patch"
    "sha256=c413d9617e1122a9fdad8f1f63859bdf9f17a8440f78bdfbaecc432bae580fac"
  ]
  [
    "js_of_ocaml-mixed-block-bytecode-op.patch"
    "sha256=ed6cfee285491515d497e8871c8534236e9a77939c3838dfd5b3fdb20626e347"
  ]
  [
    "js_of_ocaml-mixed-block-bytecode-op-regression-test.patch"
    "sha256=046c0cde7de52fe9b31ba4aeb1185aefbb3c9d3b3abb50b111e699d2b69c89a0"
  ]
  [
    "js_of_ocaml-int_u-array-primitives.patch"
    "sha256=99eba4301613d03e0305017a687c768bd24a22cef0db25ab62cbc3d304f647ba"
  ]
  [
    "js_of_ocaml-symtable-5.2-api.patch"
    "sha256=9a999950e8984cc582e3830f447111e1082dc720609334de66a011347d26da9b"
  ]
  [
    "js_of_ocaml-jane-street-5.2-compatibility.patch"
    "sha256=45391a7a7da6c5bfbe97ec1272cb369d533c2d95cf7a7a56d754db94871eb043"
  ]
  [
    "js_of_ocaml-migrate-labeled-tuples-shims.patch"
    "sha256=981df4f7397fd84e3e06b54644f5e37f464764045703bc117b9f4b49a630f88a"
  ]
  [
    "js_of_ocaml-floatarray_create_local.patch"
    "sha256=f17e392acc941dde475cb7be0654037df9b8d550aeae0d96b65394e4c4a1d4ca"
  ]
  [
    "js_of_ocaml-jane-street-const_null-support.patch"
    "sha256=e708cdc01c0cef3fce1cb9f31b33324977dcca1c166601905fcac1ef10262c3a"
  ]
  [
    "js_of_ocaml-float32.patch"
    "sha256=8d6ebad1481711f57c5ed6dd36187b96ce8fcc51cdf3b0e9d5c277687601c625"
  ]
  [
    "js_of_ocaml-caml_array_append.patch"
    "sha256=430f2a026ce0738ae65b8b67ba614bae89bc57fffdf58293bae249e2fa8cedbd"
  ]
  [
    "js_of_ocaml-5.2.0-compiler-changes.patch"
    "sha256=12626322e63a8eaf68d4c8a1a1d3f428832869fae7020588e0fe40bbd8fd8cf8"
  ]
  [
    "js_of_ocaml-5.3-tests-runtime.patch"
    "sha256=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
  ]
  [
    "js_of_ocaml-caml_bigstring_strncmp.patch"
    "sha256=6fb900f0ff96d99e2a146a24e799f0bfcf234aa06e8447169ede86452e36fe3f"
  ]
  [
    "wasm_of_ocaml-stub-caml_ml_set_channel_refill.patch"
    "sha256=005bce63009b9539b65036b22a7b7cc531755c7caa3cf1ed8d8697698090e136"
  ]
  [
    "js_of_ocaml-no-compression-module-5.2.patch"
    "sha256=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
  ]
  [
    "js_of_ocaml-obj_stubs.patch"
    "sha256=9e9064f255c065a3152f665bd5b464040f3cfbbd2580aa4bb6e17be9c2b7fcc8"
  ]
  [
    "js_of_ocaml-global_deadcode-fix.patch"
    "sha256=5b49d6ee62ae87c77d88ea8022b022830f906367dc9b9ea2e582f037a739292f"
  ]
  [
    "js_of_ocaml-local-bytes.patch"
    "sha256=1c6170fec57089f515ec71bd9873d48bd5ae9c4a85f14b80f33039cce9f232ae"
  ]
  [
    "js_of_ocaml-n-ary-functions.patch"
    "sha256=b9b078c1f227624cc5fc9dd574c19785354267c19299dcf2f9b9642d0114eddf"
  ]
  [
    "js_of_ocaml-optcomp_lite_fixes.patch"
    "sha256=b98305f8885c0377714677b2ca6d0d561c18bee6a8fc0d2f9d0abf52694968e0"
  ]
  [
    "js_of_ocaml-revert_9c15703872_behavior_changing_rewrite_of_float_to_bits.patch"
    "sha256=899ec90b4c1f5f1251d2c77fdb842f11b5a07d01430da4e5c75610d4bf541faa"
  ]
  [
    "js_of_ocaml-stop_evaluating_caml_int64_bits_of_float_to_avoid_breaking_float_u.patch"
    "sha256=483e848b0dfe54b75c31cd990191730c0070ad8a21912b1beca97111e01a718e"
  ]
  [
    "js_of_ocaml-gh2034.patch"
    "sha256=ec01ea15a9d21c22790ad3c93e9d68154e364462de6a2ce1dbbb62e8af25fc2d"
  ]
  [
    "js_of_ocaml-unboxed-indexing.patch"
    "sha256=2c8b76947795fa34683e7c2bf1022a95058bde146c7832e1bd6e8a33b8d6cfc7"
  ]
  [
    "js_of_ocaml-atomics.patch"
    "sha256=cfe956bb047c252faa2397ff2badca80972d74e1dca0cb633202313dfb8f5da4"
  ]
  [
    "js_of_ocaml-flipped-conditions-in-test.patch"
    "sha256=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
  ]
  [
    "js_of_ocaml-atomic-cmpxchg.patch"
    "sha256=89612eb8c1e64898205c0b59c6b73987d2ff993a8c366fb61dac6db90e2806bc"
  ]
  [
    "js_of_ocaml-toplevel.patch"
    "sha256=fc9e1c363cd14d77edb3d6017ec2a8d2211dc755ff902e2a075a372b1e665f9e"
  ]
  [
    "js_of_ocaml-small-int-literals.patch"
    "sha256=4c3fd2d3a50d220af2bdd377016e3f3354b98b770457ff200494be70bc9bb5b2"
  ]
  [
    "dune.patch"
    "sha256=f76da998ab76de56309bd0da3e4db1fb496d6d235d7a0ac2f78e3bafe098714e"
  ]
]
