opam-version: "2.0"
version: "5.2.0+ox"
synopsis: "OxCaml"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
authors: "Xavier Leroy and many contributors"
maintainer: "Jane Street <opensource-contacts@janestreet.com>"
homepage: "https://oxcaml.org"
bug-reports: "https://github.com/oxcaml/oxcaml/issues"
dev-repo: "git+https://github.com/oxcaml/oxcaml/flambda-backend#main"
depends: [
  "conf-autoconf"         {build}
  "conf-which"            {build}
  "ocaml"                 {= "5.2.0" & post}
  "base-unix"             {post}
  "base-bigarray"         {post}
  "base-threads"          {post}
  "base-domains"          {post}
  "base-nnp"              {post}
  "ocaml-options-vanilla" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
setenv: CAML_LD_LIBRARY_PATH = "%{lib}%/stublibs"
build: [
  ["tar" "-xf" "init-compiler.tar.gz"]
  ["tar" "-xf" "init-dune.tbz"]
  ["tar" "-xf" "init-menhir.tar.gz"]
  [
    "sh"
    "-exc"
    "cd ocaml-4.14.2 && ./configure --prefix %{build}%/init_deps --disable-ocamldoc"
  ] {os != "openbsd" & os != "macos"}
  [
    "sh"
    "-exc"
    "cd ocaml-4.14.2 && ./configure --prefix %{build}%/init_deps --disable-ocamldoc CC=cc ASPP='cc -c'"
  ] {os = "openbsd" | os = "macos"}
  ["sh" "-exc" "make -C ocaml-4.14.2 -j%{jobs}%"]
  ["sh" "-exc" "make -C ocaml-4.14.2 install"]
  [
    "sh"
    "-exc"
    "cd dune-3.20.2; PATH=%{build}%/init_deps/bin/:$PATH ocaml boot/bootstrap.ml -j %{jobs}%"
  ]
  [
    "sh"
    "-exc"
    "cd dune-3.20.2; PATH=%{build}%/init_deps/bin/:$PATH ./_boot/dune.exe build dune.install --release --profile dune-bootstrap -j %{jobs}%"
  ]
  [
    "sh"
    "-exc"
    "cd dune-3.20.2; PATH=%{build}%/init_deps/bin/:$PATH ./_boot/dune.exe install --root %{build}%/dune-3.20.2 --prefix %{build}%/init_deps/ dune"
  ]
  [
    "sh"
    "-exc"
    "cd menhir-20231231-d3d815e4f554da68b8c247241c8f8678926eecaa; PATH=%{build}%/init_deps/bin/:$PATH %{build}%/init_deps/bin/dune build --root %{build}%/menhir-20231231-d3d815e4f554da68b8c247241c8f8678926eecaa @install -j %{jobs}%"
  ]
  [
    "sh"
    "-exc"
    "cd menhir-20231231-d3d815e4f554da68b8c247241c8f8678926eecaa; PATH=%{build}%/init_deps/bin/:$PATH %{build}%/init_deps/bin/dune install --prefix %{build}%/init_deps/ -p menhirLib,menhir -j %{jobs}%"
  ]
  ["sh" "-exc" "autoconf || autoconf27"]
  [
    "sh"
    "-exc"
    "PATH=%{build}%/init_deps/bin/:$PATH ./configure --enable-middle-end=flambda2 --enable-runtime5 --enable-stack-checks --enable-poll-insertion --enable-multidomain --disable-warn-error '--prefix=%{prefix}%' '--with-dune=%{build}%/init_deps/bin/dune'"
  ]
  ["sh" "-exc" "PATH=%{build}%/init_deps/bin/:$PATH make -j%{jobs}%"]
]
install: ["sh" "-exc" "PATH=%{build}%/init_deps/bin/:$PATH make install"]
extra-source "init-compiler.tar.gz" {
  src: "https://github.com/ocaml/ocaml/archive/4.14.2.tar.gz"
  checksum:
    "sha256=c2d706432f93ba85bd3383fa451d74543c32a4e84a1afaf3e8ace18f7f097b43"
}
extra-source "init-dune.tbz" {
  src:
    "https://github.com/ocaml/dune/releases/download/3.20.2/dune-3.20.2.tbz"
  checksum: [
    "sha256=b1a86b2d60bdb4a8b9bb6861bdf2f9f28a6e7cb5d833ce81afecceb9ef9ca549"
  ]
}
extra-source "init-menhir.tar.gz" {
  src:
    "https://gitlab.inria.fr/fpottier/menhir/-/archive/20231231/archive.tar.gz"
  checksum: [
    "md5=799748bc3b7a542798a85956c7863865"
    "sha512=620ff3443143535e03ac98c5e8ee2ddf9ba48f8cfe441302118def1da3e03ffac7f48d4d4cb129766b625ecad0fb341da1baa0169dee8b6d07a5b0bbb735cf2f"
  ]
}
url {
  src:
    "https://github.com/oxcaml/oxcaml/archive/refs/tags/5.2.0minus-19-opam.tar.gz"
  checksum:
    "sha256=30c9030e82cc282058bece5759dcf5b208dd5f1423e9a2c013933d6226c344b6"
}
patches: ["ignore-opam.patch"]
extra-files: [
  [
    "ignore-opam.patch"
    "sha256=6ece96cd3f06c3ed90f768bf63659266a670e5be0b2302354a2d0e87629ba049"
  ]
]
conflicts: [
  "base" {< "v0.18~"}
  "alcotest" {!= "1.9.0+ox"}
  "backoff" {!= "0.1.1+ox"}
  "ctypes" {!= "0.23.0+ox"}
  "ctypes-foreign" {!= "0.23.0+ox"}
  "dot-merlin-reader" {!= "5.2.1-502+ox"}
  "dune" {<= "3.20.2"}
  "gen_js_api" {!= "1.1.2+ox"}
  "js_of_ocaml" {!= "6.0.1+ox"}
  "js_of_ocaml-compiler" {!= "6.0.1+ox"}
  "js_of_ocaml-ppx" {!= "6.0.1+ox"}
  "js_of_ocaml-toplevel" {!= "6.0.1+ox"}
  "jsonrpc" {!= "1.19.0+ox"}
  "lsp" {!= "1.19.0+ox"}
  "lwt_ppx" {!= "5.9.1+ox"}
  "mdx" {!= "2.5.0+ox"}
  "merlin" {!= "5.2.1-502+ox"}
  "merlin-lib" {!= "5.2.1-502+ox"}
  "ocaml-compiler-libs" {!= "v0.17.0+ox"}
  "ocaml-index" {!= "1.1+ox"}
  "ocaml-lsp-server" {!= "1.19.0+ox"}
  "ocamlbuild" {!= "0.15.0+ox"}
  "ocamlformat" {!= "0.26.2+ox"}
  "ocamlformat-lib" {!= "0.26.2+ox"}
  "ojs" {!= "1.1.2+ox"}
  "ppxlib" {!= "0.33.0+ox"}
  "ppxlib_ast" {!= "0.33.0+ox"}
  "re" {!= "1.14.0+ox"}
  "sedlex" {!= "3.3+ox"}
  "spawn" {!= "v0.15.1+ox"}
  "topkg" {!= "1.0.8+ox"}
  "uTop" {!= "2.16.0+ox"}
  "uutf" {!= "1.0.3+ox"}
  "wasm_of_ocaml-compiler" {!= "6.0.1+ox"}
  "zarith" {<"1.12"}
  "zarith" {="1.12"}
  "zarith" {="1.13"}
  "zarith" {="1.14"}
 ]
