opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml_openapi_generator"
bug-reports: "https://github.com/janestreet/ocaml_openapi_generator/issues"
dev-repo: "git+https://github.com/janestreet/ocaml_openapi_generator.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml_openapi_generator/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "async"            {= "v0.18~preview.130.55+197"}
  "base"             {= "v0.18~preview.130.55+197"}
  "core"             {= "v0.18~preview.130.55+197"}
  "core_kernel"      {= "v0.18~preview.130.55+197"}
  "core_unix"        {= "v0.18~preview.130.55+197"}
  "jsonaf"           {= "v0.18~preview.130.55+197"}
  "ocaml-embed-file" {= "v0.18~preview.130.55+197"}
  "ppx_jane"         {= "v0.18~preview.130.55+197"}
  "ppx_jsonaf_conv"  {= "v0.18~preview.130.55+197"}
  "dune"             {>= "3.17.0"}
  "httpaf"           {>= "0.7.1"}
  "jingoo"           {>= "1.4.4" & < "1.5.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An OpenAPI 3 to OCaml client generator."
description: """
An OpenAPI 3 to OCaml client generator.
"""
url {
  src:
    "https://github.com/janestreet/ocaml_openapi_generator/archive/85ac63241ebff41e70cc1f05a4844d8fdd046b60.tar.gz"
  checksum:
    "sha256=c63546623a2060454b761177dd311255311e622d733593cd4b8ff9508ba82b0d"
}
