opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/oklab"
bug-reports: "https://github.com/janestreet/oklab/issues"
dev-repo: "git+https://github.com/janestreet/oklab.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/oklab/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "base"     {= "v0.18~preview.130.55+197"}
  "ppx_jane" {= "v0.18~preview.130.55+197"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for the oklab color space"
description: """
A library for the oklab color space.  Also includes oklch.
"""
url {
  src:
    "https://github.com/janestreet/oklab/archive/213a833e770ac1dc0fc3a3aa6d88f6133dfa0dff.tar.gz"
  checksum:
    "sha256=04c55ede8b4ac74b0604443849bcd32ec9f911051d3490dbe36c362251ba5c72"
}
