opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/parallel"
bug-reports: "https://github.com/janestreet/parallel/issues"
dev-repo: "git+https://github.com/janestreet/parallel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/parallel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                    {>= "5.2.0"}
  "await"                    {= "v0.18~preview.130.55+197"}
  "base"                     {= "v0.18~preview.130.55+197"}
  "base_bigstring"           {= "v0.18~preview.130.55+197"}
  "concurrent"               {= "v0.18~preview.130.55+197"}
  "core"                     {= "v0.18~preview.130.55+197"}
  "expect_test_helpers_core" {= "v0.18~preview.130.55+197"}
  "int_repr"                 {= "v0.18~preview.130.55+197"}
  "oxcaml_effect"            {= "v0.18~preview.130.55+197"}
  "portable"                 {= "v0.18~preview.130.55+197"}
  "portable_ws_deque"        {= "v0.18~preview.130.55+197"}
  "ppx_fuelproof"            {= "v0.18~preview.130.55+197"}
  "ppx_jane"                 {= "v0.18~preview.130.55+197"}
  "stdio"                    {= "v0.18~preview.130.55+197"}
  "unboxed"                  {= "v0.18~preview.130.55+197"}
  "unique"                   {= "v0.18~preview.130.55+197"}
  "vec"                      {= "v0.18~preview.130.55+197"}
  "base-threads"
  "dune"                     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OxCaml Parallelism"
description: """
 Parallelism infrastructure.
"""
url {
  src:
    "https://github.com/janestreet/parallel/archive/fa624f8283de0f178ab955d322aafc8969f23e46.tar.gz"
  checksum:
    "sha256=9b7aaa4898c161809a647918dc91b17bd2a979f193c3333abf1d2a0992fface1"
}
