opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_array"
bug-reports: "https://github.com/janestreet/ppx_array/issues"
dev-repo: "git+https://github.com/janestreet/ppx_array.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_array/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"          {>= "5.1.0"}
  "base"           {= "v0.18~preview.130.55+197"}
  "ppx_array_base" {= "v0.18~preview.130.55+197"}
  "ppx_helpers"    {= "v0.18~preview.130.55+197"}
  "ppx_template"   {= "v0.18~preview.130.55+197"}
  "ppxlib_jane"    {= "v0.18~preview.130.55+197"}
  "dune"           {>= "3.17.0"}
  "ppxlib"         {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "Copies array functions for unboxed types so they can be compiled for the type's specific layout."
description: """
This deriving PPX rewriter is used internally at Jane Street to allow unboxed types to use common array functions. The deriver copies array functions under unboxed types so they can be compiled for the type's specific layout. It is used to simulate layout polymorphism until it is supported first class by the compiler. The long-term goal is thus to delete it entirely.
"""
url {
  src:
    "https://github.com/janestreet/ppx_array/archive/64b88c3ef7665a03bdc789526147b94d1757caca.tar.gz"
  checksum:
    "sha256=fa100441348373e3e9f9d838dda4d8b01c5dbbcce00df7f6b188b6d7f4714e9b"
}
