opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_array_base"
bug-reports: "https://github.com/janestreet/ppx_array_base/issues"
dev-repo: "git+https://github.com/janestreet/ppx_array_base.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_array_base/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "5.1.0"}
  "ppx_helpers" {= "v0.18~preview.130.55+197"}
  "ppxlib_jane" {= "v0.18~preview.130.55+197"}
  "dune"        {>= "3.17.0"}
  "ppxlib"      {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Defines array functions used in [Base.Array]."
description: """
This PPX defines array functions used in [Base.Array] via attribute expansion. It also contains the expansion code for [ppx_array], which registers the deriving and extension PPXes.
"""
url {
  src:
    "https://github.com/janestreet/ppx_array_base/archive/ef85534c1b41d02289f78c56b82fa7aacf364a40.tar.gz"
  checksum:
    "sha256=679aeeb2bb638a372683e09c9a15f0c8ca3bf443eadb674977727ed49d489c69"
}
